--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Christine Marie Sowa
 description: Computer Scientist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/1.jpeg
+avatar: images/1.jpeg
 
 #
 # Flags below are optional
