--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   email: csowa@andrew.cmu.edu
   facebook: christine.sowa
   github: cmsowa
-  instagram: xtinesowa
+  instagram: xtine_leaps
   linkedin: christine-sowa/
   rss: # just type anything here for a working RSS icon
   twitter: christine_owl
