--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Christine Marie Sowa
+name: Christine Sowa Lepird
 
 # Short bio or description (displayed in the header)
 description: Computer Scientist
